compiler/weave_syntax/tests/data/syntax/IncompleteNamespace5.error
error: Unexpected tokens
        --> <source>:1:1
         |
       1 | namespace X ;
         | ^^^^^^^^^^^
